<resources>
    <string name="app_name">Sales Rep</string>
    <string name="alert">Alert</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="dialog_camera">Camera</string>
    <string name="dialog_gallery">Gallery</string>
    <string name="dialog_select_your_choice">Select your choice</string>
    <string name="dialog_remove_image">Remove image ?</string>
    <string name="mins">mins</string>
    <string name="ok">ok</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="emailid">Email ID</string>
    <string name="send_confirmation">Send Confirmation</string>
    <string name="email_sent">Email will be sent to this address</string>
    <string name="set_password">Set Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="new_password">New Password</string>
    <string name="today_route">Today\'s Route</string>
    <string name="start_trip">Start Trip</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="back">Stock Count</string>
    <string name="customer_name">Customer Name</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="enter_host_name">Enter host name</string>
    <string name="enter_url">Enter Url</string>
    <string name="_continue">Continue</string>
    <string name="please_enter_host">Please enter host</string>
    <string name="invalid_host">Invalid host</string>
    <string name="logo">LO\nGO</string>
    <string name="get_started">Get Started</string>
    <string name="name">Name</string>
    <string name="customer_list">Customer List</string>
    <string name="routes">Routes</string>
    <string name="stock_count">Stock Count</string>
    <string name="product_movement">Product Movement</string>
    <string name="value_reconciliation">Value Reconciliation</string>
    <string name="documents">Documents</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="error_email_empty">Please enter email address</string>
    <string name="error_password_empty">Please enter password</string>
    <string name="error_confirm_password_empty">Please confirm password</string>
    <string name="error_invalid_email">Please enter valid email</string>
    <string name="error_please_enter_first_name">Please enter first name</string>
    <string name="Account.email">Email or Phone number</string>
    <string name="login_terms">I confirm that I have reached the age of majority (18 years), that I am a customer of British American Tobacco México Comercial, S.A. de C.V. and I expressly state that I agree with the Terms and Conditions of this Website.</string>
    <string name="login_terms_check">Please check terms and conditions</string>
    <string name="name_of_app">Sales Rep</string>
    <string name="next_generation_social_app">Sales Rep Portal</string>
    <string name="territorry">Territory</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="error_code_empty">Please enter verification code</string>
    <string name="error_please_enter_valid_code">Invalid Code</string>
    <string name="password_policy">Password Policy</string>
    <string name="error_password_did_not_match">Password did not match</string>
    <string name="media_permission">This feature needs permission to use camera and external storage.</string>
    <string name="bluetooth_permission">This feature needs permission to use bluetooth.</string>
    <string name="rout_progress">Route Progress</string>
    <string name="today_route_text">Today\'s route is</string>
    <string name="min_progress_percent">0%</string>
    <string name="max_progress_percent">100%</string>
    <string name="progress_percent">%s %</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_text">Do you want to change the language of entire application ?</string>
    <string name="recover_password">Recover Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="didnt_receive_code">Din\'t receive a code yet?</string>
    <string name="resend_code">Resend Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="code_over_email">We sent you a verification code at %s</string>
    <string name="signup_successfull">Password Reset Successfully</string>
    <string name="hello">Hello!</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="use_my_location">Use My Location</string>
    <string name="we_will_need_your_location">We will need your location to give you better experience</string>
    <string name="allow_your_location">Allow Your Location</string>
    <string name="_route">Route :</string>
    <string name="any_route">Any Route</string>
    <string name="pending">Pending</string>
    <string name="all">All</string>
    <string name="code">Code</string>
    <string name="delivery">Delivery</string>
    <string name="balance">Balance</string>
    <string name="new_customer">New Customer</string>
    <string name="account_name">Account Name</string>
    <string name="work_fone_num">Work Phone No.</string>
    <string name="call_phone_num">Call Phone No.</string>
    <string name="tax_num">Tax Number</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="change">Change</string>
    <string name="add_customer">Add Customer</string>
    <string name="address">Address</string>
    <string name="street_number">Street No.</string>
    <string name="suburb">Suburb</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="done">Done</string>
    <string name="zip_code">Zip Code</string>
    <string name="preferred_visit_day">Preferred Visit Day</string>
    <string name="select_day">Select Day</string>
    <string name="billing_location">Billing Location</string>
    <string name="billing_address">Billing Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="edit">Edit</string>
    <string name="error_address_empty">Please enter address</string>
    <string name="error_state_empty">Please enter state</string>
    <string name="error_zipcode_empty">Please enter zipcode</string>
    <string name="error_country_empty">Please enter country</string>
    <string name="error_city_empty">Please enter city</string>
    <string name="address_added">New address added successfully</string>
    <string name="error_street_num_empty">Please add street num</string>
    <string name="error_account_name_empty">Please add account name</string>
    <string name="error_phone_empty">Please enter phone number</string>
    <string name="error_day_empty">Please select preferred day</string>
    <string name="error_time_empty">Please select preferred time</string>
    <string name="error_tax_empty">Please add tax number</string>
    <string name="track">Track</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reason_for_rejection">Reason for Rejection</string>
    <string name="end">End</string>
    <string name="cannot_start">You Can Only Start Route . If you are near warehouse</string>
    <string name="select_reason">Select Reason</string>
    <string name="route_ended">Route Ended</string>
    <string name="route_skipped">Route Skipped</string>
    <string name="not_started">Not Started</string>
    <string name="message_alert">Message Alert</string>
    <string name="start_route_first">Start Route First</string>
    <string name="ended">Ended</string>
    <string name="route_list">Route List</string>
    <string name="customers">Customers</string>
    <string name="cannot_skip">Cannot skip this task</string>
    <string name="complete_task_first">Need to complete required task before ending this activity</string>
    <string name="start_activity_first">Start activity first</string>
    <string name="off_route_alert">Off Route Alert</string>
    <string name="off_route_msg">"Please follow the route "</string>
    <string name="only_resume_on_route">Follow the route to resume task</string>
    <string name="search">Search</string>
    <string name="astric">*</string>
    <string name="visit_executed">Visits Executed</string>
    <string name="total_visits">Total Visits</string>
    <string name="distance">Distance</string>
    <string name="avg_speed">Avg. Speed</string>
    <string name="duration">Duration</string>
    <string name="visit_effectivenes">Visits Effectiveness</string>
    <string name="today_visits_completed">Total visits completed / Total Visits</string>
    <string name="average_visit_time">Average visit time</string>
    <string name="sales_effectivenes">Sales Effectiveness</string>
    <string name="today_visits_confirmed">Total visits confirmed / Total visits executed</string>
    <string name="customer_detail">Customer Detail</string>
    <string name="day_of_visit">Day Of Visit</string>
    <string name="open_balance">Open Balance</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="available_credit">Available Credit</string>
    <string name="select">Select</string>
    <string name="km">Km</string>
    <string name="km_hr">Km/Hr</string>
    <string name="logout_text">You want to logout from this account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="preferred_visit_time">Preferred Visit Time</string>
    <string name="select_time">Select Time</string>
    <string name="update">Update</string>
    <string name="update_successfully">Task updated successfully</string>
    <string name="start_point">"Route Start Point "</string>
    <string name="end_point">Route End Point</string>
    <string name="statergic_flag">Strategic /n Flag</string>
    <string name="manual_flag">Manual Flag</string>
    <string name="type">Type</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="total">Total</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="install_date">Install Date</string>
    <string name="title">Title</string>
    <string name="route_id">Route ID</string>
    <string name="no_record">No Record</string>
    <string name="skipped">Skipped</string>
    <string name="tracking_location">Tracking Location</string>
    <string name="prepare_stock">Prepare Stock</string>
    <string name="add_product">Add Product</string>
    <string name="customer_number">Customer Number</string>
    <string name="sku">SKU</string>
    <string name="uom">UOM</string>
    <string name="qty">Qty</string>
    <string name="location">Location</string>
    <string name="enter">Enter</string>
    <string name="choose_product">Choose Product</string>
    <string name="please_add_quantity_and_location">Please add quantity and select location</string>
    <string name="save">Save</string>
    <string name="execute_survey">Execute Survey</string>
    <string name="enter_digit">Enter Digit</string>
    <string name="enter_text_here">Enter Text Here</string>
    <string name="order_num">Order Number</string>
    <string name="order_status">Order Status</string>
    <string name="sub_total">Sub Total</string>
    <string name="created">Created</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="commited">Commited</string>
    <string name="create_product_movement">Create Product Movement</string>
</resources>