<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_4sdp"
        android:weightSum="100"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/code"
            android:id="@+id/tvCode"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="start"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/blue_00"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_10sdp"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_weight="30"
            android:maxLines="1"
            android:text="@string/name"
            android:ellipsize="end"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/grey_6"
            android:textSize="@dimen/_10sdp"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="25"
            android:maxLines="1"
            android:ellipsize="end"
            android:id="@+id/tvDelivery"
            android:text="@string/delivery"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/grey_6"
            android:textSize="@dimen/_10sdp"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="20"
            android:maxLines="2"
            android:text="@string/balance"
            android:id="@+id/tvBalance"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/blue_00"
            android:textSize="@dimen/_10sdp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/grey_6"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>