<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
            android:drawableTint="@color/black"
            android:gravity="start"
            android:drawablePadding="@dimen/_12sdp"
            android:text="@string/product_movement"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingHorizontal="@dimen/_4sdp"
                            android:paddingTop="@dimen/_6sdp"
                            android:paddingBottom="@dimen/_6sdp"
                            android:background="@color/grey_7"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvName"
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:fontFamily="@font/montserrat_semibold"
                                android:gravity="center_horizontal"
                                android:text="@string/name"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp" />
                            <!---->
                            <!---->
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvDate"
                                android:layout_width="@dimen/_72sdp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/_2sdp"
                                android:gravity="center_horizontal"
                                android:text="@string/created"
                                android:ellipsize="end"
                                android:fontFamily="@font/montserrat_semibold"
                                android:maxLines="1"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvFrom"
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/_2sdp"
                                android:gravity="center_horizontal"
                                android:text="@string/from"
                                android:ellipsize="end"
                                android:fontFamily="@font/montserrat_semibold"
                                android:maxLines="1"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp" />
                            <!---->
                            <!---->
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvTo"
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/_4sdp"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/to"
                                android:gravity="center"
                                android:maxLines="2"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvStatus"
                                android:layout_width="@dimen/_72sdp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/_4sdp"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/status"
                                android:gravity="center"
                                android:maxLines="2"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp" />


                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvCommitDate"
                                android:layout_width="@dimen/_72sdp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/_4sdp"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/commited"
                                android:gravity="center"
                                android:maxLines="2"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp" />



                        </androidx.appcompat.widget.LinearLayoutCompat>


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/rvInventory"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_inventory"
                        />

                </LinearLayout>


            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tvAddInventory"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:background="@drawable/background_blue_light_curved_12dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/create_product_movement"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

</layout>
