<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:padding="@dimen/_6sdp"
                android:src="@drawable/ic_back"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/customer_list"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="@id/ivBack" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:background="@drawable/bg_outline_grey"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_2sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp">

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:drawableStart="@drawable/places_ic_search"
                    android:drawableLeft="@drawable/places_ic_search"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/grey_6"
                    android:textCursorDrawable="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/ivCancelSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/places_ic_clear"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/grey_7"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp"
        android:weightSum="100">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="25"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="start"
            android:text="@string/code"

            android:textColor="@color/grey_6"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_weight="30"
            android:fontFamily="@font/montserrat_semibold"
            android:maxLines="1"
            android:text="@string/name"
            android:textColor="@color/grey_6"
            android:textSize="@dimen/_10sdp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="25"
            android:fontFamily="@font/montserrat_semibold"
            android:maxLines="2"
            android:text="@string/delivery"
            android:textColor="@color/grey_6"
            android:textSize="@dimen/_10sdp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="20"
            android:fontFamily="@font/montserrat_semibold"
            android:maxLines="2"
            android:text="@string/balance"
            android:textColor="@color/grey_6"
            android:textSize="@dimen/_10sdp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCustomers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10"
        tools:listitem="@layout/item_customer">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_margin="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:background="@drawable/bg_curved_blue"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/new_customer"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

</LinearLayout></layout>
